# FFI

./: .gitignore  FFI.sln
Managed/: Managed.csproj  Program.cs  appsettings.json
Managed/Data/: Data.cs  DataDeleter.cs  DataReader.cs  DataStore.cs  DataWriter.cs
Managed/Options/: Storage.cs
Native/: Deleter.cs  Key.cs  Native.csproj  ReadResult.cs  Reader.cs  Rust.targets  Store.cs  Writer.cs
Native/Interop/: DbKey.cs  DbResult.cs  DeleterHandle.cs  LastResult.cs  Native.cs  ReaderHandle.cs  StoreHandle.cs  WriterHandle.cs
Native/Rust/: Cargo.toml
Native/Rust/src/: lib.rs
Native/Rust/src/db/: data.rs  error.rs  mod.rs  result.rs
Native/Rust/src/db/store/: deleter.rs  mod.rs  reader.rs  writer.rs
Native/Rust/src/interop/: handle_exclusive.rs  handle_shared.rs  is_null.rs  macros.rs  mod.rs  option.rs  out.rs  read.rs  ref.rs  ref_mut.rs  test.rs  thread_bound.rs
